# computer-vision-cas-hslu-2025

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: day1_cnn.yaml
notebooks/day1/: 00_setup_test.ipynb  01_image_data_basics.ipynb  02_cnn_intro_and_training.ipynb  03_object_detection.ipynb  04_semantic_segmentation.ipynb
notebooks/day2/: 01_pixelcnn.ipynb  02_vae.ipynb  03_gans.ipynb
slides/: slides.md
src/cvcourse/: __init__.py  config.py
src/cvcourse/data/: __init__.py  datasets.py  loaders.py  transforms.py
src/cvcourse/models/: __init__.py  cnn_classification.py  detection.py  gans.py  pretrained.py  segmentation.py
src/cvcourse/training/: __init__.py  loops.py  metrics.py  schedulers.py
src/cvcourse/utils/: __init__.py  device.py  logging.py  paths.py
src/cvcourse/viz/: __init__.py  bounding_boxes.py  feature_maps.py  images.py  masks.py
